[package]
name = "qrs"
version = "0.1.0"
authors = ["hmb <humberto.munozb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alga = "0.9"
approx = {version = "0.3", features=["num-complex"]}
lapack-traits = "0.1.0"
cblas = "0.2.0"
condest = {git = "https://github.com/hmunozb/rust-condest.git", branch="generic-scalar"}
lapacke = "0.2.0"
expm = {git = "https://github.com/hmunozb/rust-expm.git", branch="generic-scalar"}
integrators = {git = "https://github.com/hmunozb/integrators.git", branch="no-gslcblas", default-features=false, features=["gsl","no_gslcblas"]}
#integrators = {version="0.0.3", default-features=false, features=["gsl"]}
interpolation = "0.2.0"
itertools = "0.8.0"
itertools-num = "0.1.3"
num-complex = "0.2"
num-traits = "0.2.8"
ndarray = {version="0.13", features=["rayon"]}
log = "0.4.8"
nalgebra = "0.19"
#packed_simd = "0.3.3"
rand = "0.7.2"
rand_distr = "0.2.2"
rand_xoshiro = "0.4.0"
rayon = "1.0"
simd-phys = {git="https://github.com/hmunozb/simd-phys-rs.git"}
spin-langevin = {git="https://github.com/hmunozb/spin-langevin.git"}
smallvec = "1.0.0"
ndarray-stats = "0.3"
vec_ode = {git="https://github.com/hmunozb/vec-ode.git"}

[dev-dependencies]
criterion = "0.3"
#cblas-sys = "0.1.4"
#openblas-src = "0.7.0"
openblas-src = {version="0.9", default-features=false, features=["system"]}
lapacke-sys = "0.1.4"
simple_logger = "1.3.0"

[[bench]]
name = "qrs_bench"
harness = false
path = "benches/lib.rs"