[package]
name = "qrs-core"
version = "0.0.1"
authors = ["hmb <humberto.munozb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 alga = "0.9"
approx = {version = "0.3", features=["num-complex"]}
cauchy = "0.2"
cblas = "0.2"
itertools = "0.8"
generic-array = "0.14.1"
lapack-traits = {version = "0.2.2", features=["simba"]}
lapacke = "0.2"
nalgebra = "0.21.0"
ndarray = "0.13"
ndarray-linalg = {version = "0.12"}
num-complex = "0.2"
num-traits = "0.2"
simba = "0.1"
sprs = "0.7"
vec_ode = {git="https://github.com/hmunozb/vec-ode.git"}

[dev-dependencies]
openblas-src = {version = "0.9.0", default-features=false, features=["system"]}