[package]
name = "qrs-core"
version = "0.0.1"
authors = ["hmb <humberto.munozb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 alga = "0.9"
approx = {version = "0.5", features=["num-complex"]}
cauchy = "0.2"
cblas = "0.4"
itertools = "0.10.3"
lapack-traits = {version = "0.4", features=["simba"]}
lapacke = "0.5"
nalgebra = "0.29.0"
ndarray = "0.15"
ndarray-linalg = {version = "0.14"}
num-complex = "0.4"
num-traits = "0.2"
simba = "0.6"
sprs = "0.7"
vec_ode = {git="https://github.com/hmunozb/vec-ode.git"}

[dev-dependencies]
openblas-src = {version = "0.9.0", default-features=false, features=["system"]}